--- a/src/scss/03_elements/_elements.link.scss
+++ b/src/scss/03_elements/_elements.link.scss
@@ -12,3 +12,14 @@ a,
     color: rgb(var(--color-highlight-dark));
   }
 }
+
+.lia-link {
+  @at-root html.lia-variant-dark & {
+    border-color: rgb(
+      from rgb(var(--color-highlight)) calc(r * 2.2) calc(g * 2.2) calc(b * 2.2)
+    );
+    color: rgb(
+      from rgb(var(--color-highlight)) calc(r * 2.5) calc(g * 2.5) calc(b * 2.5)
+    );
+  }
+}
