--- a/src/scss/05_components/_components.quote.scss
+++ b/src/scss/05_components/_components.quote.scss
@@ -1,6 +1,6 @@
-@use "sass:color";
-@use "sass:map";
-@use "../01_tools/tools.color";
+@use 'sass:color';
+@use 'sass:map';
+@use '../01_tools/tools.color';
 
 .lia-quote {
   background-color: rgba(var(--color-highlight), 0.15);
@@ -16,10 +16,17 @@
 
   &__text {
     color: rgb(var(--color-highlight-dark));
-    font-family: "LiaSourceSerifPro";
+    font-family: 'LiaSourceSerifPro';
     font-weight: 600;
     font-size: 1.6rem;
     text-align: center;
+
+    @at-root html.lia-variant-dark & {
+      color: rgb(
+        from rgb(var(--color-highlight-dark)) calc(r * 4.8) calc(g * 4.8)
+          calc(b * 4.8)
+      );
+    }
   }
 
   &__cite {
