--- a/src/scss/03_elements/_elements.list.scss
+++ b/src/scss/03_elements/_elements.list.scss
@@ -17,6 +17,12 @@
     > li {
       &::marker {
         color: rgb(var(--color-highlight-dark));
+        @at-root html.lia-variant-dark & {
+          color: rgb(
+            from rgb(var(--color-highlight-dark)) calc(r * 2.5) calc(g * 2.5)
+              calc(b * 2.5)
+          );
+        }
       }
       > p {
         display: block;
@@ -26,6 +32,13 @@
     ul li {
       &::marker {
         color: rgb(var(--color-highlight-dark));
+
+        @at-root html.lia-variant-dark & {
+          color: rgb(
+            from rgb(var(--color-highlight-dark)) calc(r * 2.5) calc(g * 2.5)
+              calc(b * 2.5)
+          );
+        }
       }
       list-style-type: circle;
     }
@@ -33,6 +46,13 @@
     ul li ul li {
       &::marker {
         color: rgb(var(--color-highlight-dark));
+
+        @at-root html.lia-variant-dark & {
+          color: rgb(
+            from rgb(var(--color-highlight-dark)) calc(r * 2.5) calc(g * 2.5)
+              calc(b * 2.5)
+          );
+        }
       }
       list-style-type: square;
     }
@@ -48,6 +68,13 @@
         position: absolute;
         left: -1em;
         font-weight: bold;
+
+        @at-root html.lia-variant-dark & {
+          color: rgb(
+            from rgb(var(--color-highlight-dark)) calc(r * 2.5) calc(g * 2.5)
+              calc(b * 2.5)
+          );
+        }
       }
     }
   }
@@ -56,6 +83,13 @@
     > li {
       &::marker {
         color: rgb(var(--color-highlight-dark));
+
+        @at-root html.lia-variant-dark & {
+          color: rgb(
+            from rgb(var(--color-highlight-dark)) calc(r * 2.5) calc(g * 2.5)
+              calc(b * 2.5)
+          );
+        }
       }
 
       > * {
