--- a/src/scss/03_elements/_elements.input.scss
+++ b/src/scss/03_elements/_elements.input.scss
@@ -76,7 +76,7 @@ input[type='search']::-webkit-search-results-decoration {
   cursor: pointer;
   height: 2.4rem;
   position: relative;
-  transition: all 125ms ease-in-out;
+  transition: all 125ms ease-out;
   vertical-align: middle;
   width: 2.4rem;
 
