--- a/src/scss/05_components/_components.nav.scss
+++ b/src/scss/05_components/_components.nav.scss
@@ -19,7 +19,7 @@
     background: rgb(var(--lia-grey-light));
     border: none;
     height: 1px;
-    margin: 1rem 0;
+    // margin: 1rem 0;
     width: 100%;
   }
 }
