--- a/src/scss/03_elements/_elements.page.scss
+++ b/src/scss/03_elements/_elements.page.scss
@@ -1,5 +1,5 @@
-@use "../00_settings/settings.colors";
-@use "../00_settings/settings.global" as settings2;
+@use '../00_settings/settings.colors';
+@use '../00_settings/settings.global' as settings2;
 
 :root {
   // Basic color definitions
