--- a/src/scss/03_elements/_elements.textarea.scss
+++ b/src/scss/03_elements/_elements.textarea.scss
@@ -1,6 +1,6 @@
-@use "sass:color";
-@use "sass:map";
-@use "../01_tools/tools.color";
+@use 'sass:color';
+@use 'sass:map';
+@use '../01_tools/tools.color';
 
 .lia-textarea {
   max-width: 100%;
