--- a/src/scss/05_components/_components.accordion.scss
+++ b/src/scss/05_components/_components.accordion.scss
@@ -1,6 +1,6 @@
-@use "sass:color";
-@use "sass:map";
-@use "../00_settings/settings.global";
+@use 'sass:color';
+@use 'sass:map';
+@use '../00_settings/settings.global';
 
 .lia-accordion {
   &__item {
