--- a/src/scss/06_utilities/_utilities.hidden.scss
+++ b/src/scss/06_utilities/_utilities.hidden.scss
@@ -1,6 +1,6 @@
-@use "../00_settings/settings.global";
-@use "../01_tools/tools.hidden-visually";
-@use "../01_tools/tools.px-em-calc" as tools2;
+@use '../00_settings/settings.global';
+@use '../01_tools/tools.hidden-visually';
+@use '../01_tools/tools.px-em-calc' as tools2;
 
 /* ==========================================================================
    #HIDE
