--- a/src/scss/06_utilities/_utilities.text.scss
+++ b/src/scss/06_utilities/_utilities.text.scss
@@ -20,7 +20,7 @@
 
 /* Text-Color */
 .text-debug {
-  color: #ADD8E6; // rgb(var(--lia-blue));
+  color: #add8e6; // rgb(var(--lia-blue));
   // font-weight: bold;
 }
 .text-info {
@@ -28,11 +28,11 @@
   // font-weight: bold;
 }
 .text-warning {
-  color: #FF0; // rgb(var(--lia-yellow));
+  color: #ff0; // rgb(var(--lia-yellow));
   // font-weight: bold;
 }
 .text-error {
-  color: #F00; // rgb(var(--lia-red));
+  color: #f00; // rgb(var(--lia-red));
   // font-weight: bold;
 }
 
