--- a/src/scss/06_utilities/_utilities.width.scss
+++ b/src/scss/06_utilities/_utilities.width.scss
@@ -1,5 +1,5 @@
-@use "../00_settings/settings.global";
-@use "../01_tools/tools.px-em-calc";
+@use '../00_settings/settings.global';
+@use '../01_tools/tools.px-em-calc';
 
 .max-w-0 {
   max-width: 0;
