--- a/src/scss/dump.scss
+++ b/src/scss/dump.scss
@@ -1,5 +1,5 @@
-@use "sass:map";
-@use "00_settings/settings.global";
+@use 'sass:map';
+@use '00_settings/settings.global';
 
 /* --------------------------------------------------
    Dump for all CSS that has no particular function
