--- a/src/scss/03_elements/_elements.headline.scss
+++ b/src/scss/03_elements/_elements.headline.scss
@@ -1,5 +1,5 @@
-@use "../00_settings/settings.global";
-@use "../01_tools/tools.breakpoints";
+@use '../00_settings/settings.global';
+@use '../01_tools/tools.breakpoints';
 
 /* --------------------------------------------------
    Headline Settings
@@ -42,7 +42,7 @@ h5 {
 h1 {
   font-size: calc(#{$h1-mobile} * var(--font-size-multiplier));
 
-  @include tools.breakpoint("md") {
+  @include tools.breakpoint('md') {
     font-size: calc(#{$h1-desktop-presentation} * var(--font-size-multiplier));
 
     @at-root .lia-mode--textbook & {
@@ -54,7 +54,7 @@ h1 {
 h2 {
   font-size: calc(#{$h2-mobile} * var(--font-size-multiplier));
 
-  @include tools.breakpoint("md") {
+  @include tools.breakpoint('md') {
     font-size: calc(#{$h2-desktop} * var(--font-size-multiplier));
   }
 }
@@ -62,7 +62,7 @@ h2 {
 h3 {
   font-size: calc(#{$h3-desktop} * var(--font-size-multiplier));
 
-  @include tools.breakpoint("md") {
+  @include tools.breakpoint('md') {
     font-size: calc(#{$h3-desktop} * var(--font-size-multiplier));
   }
 }
