--- a/src/scss/05_components/_components.header.scss
+++ b/src/scss/05_components/_components.header.scss
@@ -1,5 +1,5 @@
-@use "../00_settings/settings.global";
-@use "../01_tools/tools.breakpoints";
+@use '../00_settings/settings.global';
+@use '../01_tools/tools.breakpoints';
 
 $header-height-desktop: 7.8rem;
 $header-height-mobile: 5.6rem;
@@ -18,7 +18,7 @@ $header-height-mobile: 5.6rem;
   right: 0;
   z-index: 100;
 
-  @include tools.breakpoint("md") {
+  @include tools.breakpoint('md') {
     height: $header-height-desktop;
     margin: 0 3rem;
   }
