--- a/src/scss/06_utilities/_utilities.headline.scss
+++ b/src/scss/06_utilities/_utilities.headline.scss
@@ -1,6 +1,6 @@
-@use "../00_settings/settings.global";
-@use "../01_tools/tools.breakpoints";
-@use "../03_elements/elements.headline";
+@use '../00_settings/settings.global';
+@use '../01_tools/tools.breakpoints';
+@use '../03_elements/elements.headline';
 
 .h1,
 .h2,
@@ -10,9 +10,11 @@
 }
 
 .h1 {
-  font-size: calc(#{elements.$h1-mobile} * var(--font-size-multiplier)) !important;
+  font-size: calc(
+    #{elements.$h1-mobile} * var(--font-size-multiplier)
+  ) !important;
 
-  @include tools.breakpoint("md") {
+  @include tools.breakpoint('md') {
     font-size: calc(
       #{elements.$h1-desktop-presentation} * var(--font-size-multiplier)
     ) !important;
@@ -26,24 +28,34 @@
 }
 
 .h2 {
-  font-size: calc(#{elements.$h2-mobile} * var(--font-size-multiplier)) !important;
+  font-size: calc(
+    #{elements.$h2-mobile} * var(--font-size-multiplier)
+  ) !important;
 
-  @include tools.breakpoint("md") {
-    font-size: calc(#{elements.$h2-desktop} * var(--font-size-multiplier)) !important;
+  @include tools.breakpoint('md') {
+    font-size: calc(
+      #{elements.$h2-desktop} * var(--font-size-multiplier)
+    ) !important;
   }
 }
 
 .h3 {
-  font-size: calc(#{elements.$h3-desktop} * var(--font-size-multiplier)) !important;
+  font-size: calc(
+    #{elements.$h3-desktop} * var(--font-size-multiplier)
+  ) !important;
 
-  @include tools.breakpoint("md") {
-    font-size: calc(#{elements.$h3-desktop} * var(--font-size-multiplier)) !important;
+  @include tools.breakpoint('md') {
+    font-size: calc(
+      #{elements.$h3-desktop} * var(--font-size-multiplier)
+    ) !important;
   }
 }
 
 .h4,
 .h5 {
   font-family: settings.$global-font-family;
-  font-size: calc(#{elements.$h4-mobile} * var(--font-size-multiplier)) !important;
+  font-size: calc(
+    #{elements.$h4-mobile} * var(--font-size-multiplier)
+  ) !important;
   line-height: 1.38;
 }
