--- a/src/scss/05_components/_components.slide-animation.scss
+++ b/src/scss/05_components/_components.slide-animation.scss
@@ -1,10 +1,8 @@
 .lia-slide-animation {
-  margin-left: 4px;
-  padding-left: 5px;
-  margin-right: 4px;
-  padding-right: 5px;
-  padding-inline: 5px;
-  margin-inline: 4px;
+  margin-inline-start: 4px;
+  padding-inline-start: 5px;
+  margin-inline-end: 4px;
+  padding-inline-end: 5px;
 
   overflow-y: auto;
   transition: max-height 0.2s ease-out;
