refactor(CSS): unify margin and padding properties for consistency
- Replaced margin-bottom with margin-block-end and padding-top with padding-block-start in various Elm and SCSS files to enhance layout consistency and support for RTL.
- Streamlined styles across components for improved maintainability and alignment.

--- a/src/scss/03_elements/_elements.media.scss
+++ b/src/scss/03_elements/_elements.media.scss
@@ -7,7 +7,6 @@ img {
 }
 
 figure {
-  margin-bottom: 2rem;
   margin-block-end: 2rem;
 
   figcaption {
@@ -20,7 +19,7 @@ figure {
 .lia-video-wrapper,
 .lia-iframe-wrapper {
   position: relative;
-  padding-bottom: 56.25%;
+  padding-block-end: 56.25%;
   height: 0;
 }
 
