--- a/src/scss/05_components/_components.modal.scss
+++ b/src/scss/05_components/_components.modal.scss
@@ -210,6 +210,6 @@ $controlHeight: 4rem;
   .lia-video-wrapper,
   .lia-iframe-wrapper {
     position: relative;
-    padding-bottom: 56.25%;
+    padding-block-end: 56.25%;
   }
 }
