--- a/src/scss/04_objects/_objects.canvas.scss
+++ b/src/scss/04_objects/_objects.canvas.scss
@@ -216,7 +216,6 @@ $slide-margin-left-textbook: 19rem !default;
       }
 
       .lia-pagination {
-        margin-bottom: 2rem;
         margin-block-end: 2rem;
       }
     }
@@ -228,10 +227,10 @@ $slide-margin-left-textbook: 19rem !default;
       max-width: 124.6rem;
     }
 
-    @include tools.breakpoint('lg') {
-      .lia-slide__content {
-        // margin-left: calc(#{$slide-margin-left-presentation} - 3rem);
-      }
-    }
+    // @include tools.breakpoint('lg') {
+    //   .lia-slide__content {
+    //     // margin-left: calc(#{$slide-margin-left-presentation} - 3rem);
+    //   }
+    // }
   }
 }
