--- a/src/scss/05_components/_components.support-menu.scss
+++ b/src/scss/05_components/_components.support-menu.scss
@@ -12,7 +12,7 @@
   display: flex;
   flex-direction: column;
   height: 100%;
-  padding-top: 6rem;
+  padding-block-start: 6rem;
   position: fixed;
   right: 0;
   top: 0;
@@ -48,7 +48,7 @@
 
   @include tools.breakpoint('sm') {
     width: canvas.$support-width-desktop;
-    padding-top: 0rem;
+    padding-block-start: 0rem;
   }
 
   @include tools.breakpoint('md') {
@@ -169,7 +169,6 @@
     }
 
     > .icon {
-      margin-bottom: 1.8rem;
       margin-block-end: 1.8rem;
     }
 
@@ -196,7 +195,6 @@
       }
 
       > .icon {
-        margin-bottom: 0;
         margin-block-end: 0;
       }
     }
