--- a/src/scss/02_generic/_generic.shared.scss
+++ b/src/scss/02_generic/_generic.shared.scss
@@ -18,11 +18,6 @@ fieldset {
   margin-block-end: map.get(settings.$global-spacing, spacing-normal);
 }
 
-:focus {
-  outline: 0;
-  box-shadow: 0 0 0 0.25rem rgba(var(--color-highlight), 0.15) !important;
-}
-
 button,
 .lia-btn,
 input,
@@ -84,4 +79,11 @@ kbd {
   // border-bottom-color: rgb(var(--color-border));
   border-radius: 6px;
   box-shadow: inset 0 1px 0 rgb(var(--color-border));
+}
+
+:focus-visible {
+  outline-color: var(--focus-ring-color);
+  outline-offset: var(--focus-ring-offset);
+  outline-style: var(--focus-ring-style);
+  outline-width: var(--focus-ring-width);
 }
