--- a/src/scss/03_elements/_elements.button.scss
+++ b/src/scss/03_elements/_elements.button.scss
@@ -12,17 +12,6 @@ $btn-height: 3.6rem;
   line-height: settings.$global-line-height;
   padding: 0.5rem 0.6rem;
 
-  &:focus,
-  &:focus-visible {
-    outline: 3px solid rgba(var(--color-highlight), 0.3);
-    box-shadow:
-      // Inner shadow (inset)
-      inset 0 0 0 2px rgba(255, 255, 255, 0.8),
-      // Outer shadow (around the outline)
-      0 0 0 0.25rem rgba(var(--color-highlight), 0.3),
-      0 0 8px rgba(var(--color-highlight), 0.4) !important;
-  }
-
   // Hide focus outline for mouse users while keeping it for keyboard users
   &:focus:not(:focus-visible) {
     outline: none;
@@ -107,6 +96,8 @@ $btn-height: 3.6rem;
   }
 
   &--transparent {
+    --focus-ring-offset: 0px;
+
     background-color: transparent !important;
     border: none;
     color: currentColor;
