--- a/src/scss/03_elements/_elements.page.scss
+++ b/src/scss/03_elements/_elements.page.scss
@@ -1,16 +1,13 @@
-@use '../00_settings/settings.colors';
-@use '../00_settings/settings.global' as settings2;
+@use '../00_settings/settings.colors' as colors;
+@use '../00_settings/settings.global' as global;
 
 :root {
   // Basic color definitions
   // Map $global-colors and define global color variables with prefix "lia".
-  @each $color, $rgb in settings.$global-colors {
+  @each $color, $rgb in colors.$global-colors {
     --lia-#{$color}: #{$rgb};
   }
-}
 
-// Additional Color Definitions For Default Theme
-:root {
   --color-background: var(--lia-white);
   --color-border: var(--lia-grey-light);
   --color-highlight-dark: var(--lia-turquoise-dark);
@@ -48,13 +45,11 @@
     --color-highlight: var(--lia-yellow);
     --color-highlight-menu: var(--lia-white);
   }
-}
 
-:root {
   // Global Font-Settings
-  --global-font-family: #{settings2.$global-font-family};
-  --global-font-mono: #{settings2.$global-font-mono};
-  --global-font-headline: #{settings2.$global-font-headline};
+  --global-font-family: #{global.$global-font-family};
+  --global-font-mono: #{global.$global-font-mono};
+  --global-font-headline: #{global.$global-font-headline};
   --global-font-size: 1.5rem;
   --font-size-multiplier: 1;
 
@@ -69,6 +64,11 @@
   &.lia-font-scale-3 {
     --font-size-multiplier: 1.5;
   }
+
+  --focus-ring-width: #{global.$global-focus-ring-width};
+  --focus-ring-color: #{global.$global-focus-ring-color};
+  --focus-ring-offset: #{global.$global-focus-ring-offset};
+  --focus-ring-style: #{global.$global-focus-ring-style};
 }
 
 html {
